syntax = "proto3";

option csharp_namespace = "Protos.Entries";

package entries;

import "Entities/Entry.proto";

service Entries {
  rpc createEntry (CreateEntryRequest) returns (CreateEntryResponse);
}

message CreateEntryRequest {
  shared.Entry Entry = 1;
}

message CreateEntryResponse {
  shared.Entry Entry = 1;
}
