syntax = "proto3";

option csharp_namespace = "Protos.Entries.GetAllEntries";

package entries.getallentriesresponse;

import "google/type/datetime.proto";
import "google/type/latlng.proto";

message GetAllEntriesResponse {
  repeated Entry Entries = 1;
}

message Entry {
  string Id = 1;
  google.type.DateTime Created = 2;
  string UserId = 3;
  string CompetitorId = 4;
  string FirstName = 5;
  string LastName = 6;
  string Phone = 7;
  string Email = 8;
  repeated Pet Pets = 9;
  repeated string Notes = 10;
  string ActionId = 11;
  string RaceId = 12;
  string CategoryId = 13;
  Address Address = 14;
  optional google.type.DateTime Birthday = 15;
  string LanguageCode = 16;
  repeated MerchandizeItem Merchandize = 17;
  bool Accepted = 18;
  optional google.type.DateTime AcceptedDate = 19;
  EntryState State = 20;
}

enum EntryState {
  EntryState_Unspecified = 0;
  Entered = 1;
  Accepted = 2;
  Paid = 3;
  NotAccepted = 4;
}

message Address {
  string Country = 1;
  string Region = 2;
  string ZipCode = 3;
  string City = 4;
  string Street = 5;
  google.type.LatLng Position = 6;
}

message Pet {
  string Id = 1;
  string Name = 2;
  string Pedigree = 3;
  string Chip = 4;
  google.type.DateTime Birthday = 5;
  repeated Vaccination Vaccinations = 6;
}

message MerchandizeItem {
  string Id = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
  string Currency = 5;
  string Variant = 6;
  string Size = 7;
  string Color = 8;
  int32 Count = 9;
  string Note = 10;
}

message Vaccination {
  optional google.type.DateTime Date = 1;
  optional google.type.DateTime ValidUntil = 2;
  VaccinationType Type = 3;
  string Note = 4;
  string UriToPhoto = 5;
}

enum VaccinationType {
  VaccinationType_Unspecified = 0;
  Rabies = 1; // vzteklina
  Psinka = 2;
  Parvoviroza = 3;
  HepatitidaContagiosaCanis = 4;
  Leptospiroza = 5;
  Parainfluenza = 6;
  LymskaBorelioza = 7;
  Babesioza = 8;
  PlisnoveInfekce = 9;
  Leishmanioza = 10;
}